--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar nav-underline navbar-expand-lg navbar-Light bg-body shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#Home"> <strong> Create by Sefas </strong></a>
+        <a class="navbar-brand" href="#Home"> <strong> Created by Sefas </strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
