--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
     <div class="jumbotron">
       <div class="container text-center">
         <div class="row justify-content-center align-items-center">
-          <div class="col-md-5 order-2 text-start">
+          <div class="col-md align-self-center">
+            <img src="asset/Hero.webp" alt="Designed by macrovector / Freepik" width="240" />
+          </div>
+
+          <div class="col-md text-start">
             <h1 class="display-4 fw-bold text-primary">Elevate Your Business With Visual Branding</h1>
 
             <div class="row">
-              <div class="col-md-6">
-                <a class="btn btn-primary btn-lg" href="#Contact" role="button"> Start Project </a>
+              <div class="col-md">
+                <a class="btn btn-primary" href="#Contact" role="button"> Start Project </a>
 
-                <a class="btn btn-body btn-lg" href="#resume" role="button"> Resume </a>
+                <a class="btn btn-body" href="#resume" role="button"> Resume </a>
               </div>
             </div>
-          </div>
-
-          <div class="col-md-6 order-1">
-            <img src="asset/image.webp" alt="Septian Fajar Setiawan" width="320px" />
           </div>
         </div>
       </div>
@@ -77,23 +77,28 @@
 
     <!-- Konten 1 // Tentang Saya -->
     <section id="About">
-      <div class="container mb-5">
+      <div class="container mb-5 justify-content-center">
         <div class="row text-center align-items-end mb-3">
           <div class="col text-primary">
-            <h2>Tentang Saya</h2>
+            <h2>About Me</h2>
           </div>
         </div>
 
-        <div class="row text-primary justify-content-center align-items-center">
+        <div class="row text-primary justify-content-center align-items-start">
           <div class="col-md-4">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptates sequi deserunt quo officiis earum officia ea aspernatur, voluptate recusandae similique fugit asperiores magni qui architecto vero ad ipsam
-              dignissimos.
+              Welcome to my world of creation as a graphic design freelancer! I am a visual artist with a deep love of unique design and a captivating aesthetic. With long experience in this industry, I have collaborated with various
+              clients to produce impressive and eye-catching graphic designs. I believe that graphic design has the power to tell stories, inspire and create emotional connections with audiences. Each project is an opportunity for me to
+              explore creative ideas and translate a client's vision into a standout work of art. My commitment to quality and timeliness is a top priority. I always try to provide design solutions that suit the client's needs,
             </p>
           </div>
 
           <div class="col-md-4">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error facere quae nulla temporibus totam earum repellat quis vel odit, consectetur officiis aspernatur nobis, praesentium ab eius soluta autem molestiae molestias?</p>
+            <p>
+              ensuring a strong and professional message that is present in every work.On this website, you will find examples of my latest work, which includes logo designs, marketing materials, and more. I am excited to collaborate with
+              you on your next design project and create impressive and unforgettable pieces. Thank you for visiting my profile. Feel free to contact me for further discussion of your project. I look forward to the opportunity to work with
+              you and bring creative ideas to life! Let's make the world more beautiful together through inspiring graphic designs
+            </p>
           </div>
         </div>
       </div>
@@ -113,57 +118,28 @@
 
         <div class="row">
           <div class="col-md-4 mb-3">
-            <div class="card" style="">
-              <img src="asset/portfolio-7.jpg" class="card-img-top" alt="" />
+            <div class="card">
+              <img src="asset/portfolio-7.png" class="card-img-top" alt="" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Logo designs for contest on 99d, client : HOP Local Move.</p>
               </div>
             </div>
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card" style="">
-              <img src="asset/portfolio-2.jpg" class="card-img-top" alt="" />
+            <div class="card">
+              <img src="asset/portfolio-2.png" class="card-img-top" alt="" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Logo designs for Beauty Med.</p>
               </div>
             </div>
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card" style="">
-              <img src="asset/portfolio-3.jpg" class="card-img-top" alt="" />
+            <div class="card">
+              <img src="asset/portfolio-3.png" class="card-img-top" alt="" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-4 mb-3">
-            <div class="card" style="">
-              <img src="asset/portfolio-5.jpg" class="card-img-top" alt="" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 mb-3">
-            <div class="card" style="">
-              <img src="asset/portfolio-4.jpg" class="card-img-top" alt="" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 mb-3">
-            <div class="card" style="">
-              <img src="asset/portfolio-9.jpg" class="card-img-top" alt="" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Logo designs for Sequitur Renewables.</p>
               </div>
             </div>
           </div>
@@ -171,28 +147,57 @@
 
         <div class="row">
           <div class="col-md-4 mb-3">
-            <div class="card" style="">
-              <img src="asset/portfolio-1.jpg" class="card-img-top" alt="" />
+            <div class="card">
+              <img src="asset/portfolio-5.png" class="card-img-top" alt="" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Logo designs for Client Accelerator.</p>
               </div>
             </div>
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card" style="">
-              <img src="asset/portfolio-8.jpg" class="card-img-top" alt="" />
+            <div class="card">
+              <img src="asset/portfolio-4.png" class="card-img-top" alt="" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Logo designs for Impact Webmarketing.</p>
               </div>
             </div>
           </div>
 
           <div class="col-md-4 mb-3">
-            <div class="card" style="">
-              <img src="asset/portfolio-6.jpg" class="card-img-top" alt="" />
+            <div class="card">
+              <img src="asset/portfolio-9.png" class="card-img-top" alt="" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Logo designs for Redoggo.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="asset/portfolio-1.png" class="card-img-top" alt="" />
+              <div class="card-body">
+                <p class="card-text">Logo designs for Nicoler Mulder.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="asset/portfolio-8.png" class="card-img-top" alt="" />
+              <div class="card-body">
+                <p class="card-text">Logo designs for Lunar Investment.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="asset/portfolio-6.png" class="card-img-top" alt="" />
+              <div class="card-body">
+                <p class="card-text">Logo designs for Dreamguest.</p>
               </div>
             </div>
           </div>
@@ -225,28 +230,39 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-md-8">
-            <form>
+          <div class="col-md-6">
+            <div class="alert my-alert alert-success alert-dismissible fade show text-center justify-content-end d-none" role="alert">
+              <strong> <a> 🚀 Thank You! 🚀 </a> </strong>
+
+              <p>message successfully sending</p>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+
+            <form name="createdbysefas-contact-form">
               <div class="text-start mb-3">
-                <label for="name" class="form-label">Nama</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <label for="name" class="form-label">Name</label>
+                <input type="text" class="form-control" id="Name" aria-describedby="Name" name="Name" />
               </div>
 
               <div class="text-start mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <label for="Email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="Email" aria-describedby="email" name="Email" />
               </div>
 
               <div class="text-start mb-3">
-                <label for="pesan" class="form-label">pesan</label>
+                <label for="Message" class="form-label">Message</label>
               </div>
 
-              <div class="form-floating mb-3">
-                <textarea class="form-control" placeholder="pesan" id="pesan"></textarea>
-                <label for="floatingTextarea">Tinggalkam pesan</label>
+              <div class="form mb-3">
+                <textarea class="form-control" placeholder="Message" id="Message" name="Message"></textarea>
               </div>
 
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary btn-kirim">Submit</button>
+
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                <span role="status">sending...</span>
+              </button>
             </form>
           </div>
         </div>
@@ -271,5 +287,37 @@
     <!-- Akhir Konten 3 -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbyykMcq_9cleU4x7q7JS68JCa-T0YJXV-aSVXlOFYCCsT93qmrFw-r3gWTmZRPoM9dLQw/exec';
+      const form = document.forms['createdbysefas-contact-form'];
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert');
+
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        // animasi tombol
+        btnKirim.classList.toggle('d-none');
+        btnLoading.classList.toggle('d-none');
+
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+          .then((response) => {
+            // animasi notif
+            btnKirim.classList.toggle('d-none');
+            btnLoading.classList.toggle('d-none');
+
+            // text kosong
+            form.reset();
+
+            // animasi notif
+            myAlert.classList.toggle('d-none');
+
+            console.log('Success!', response);
+          })
+
+          .catch((error) => console.error('Error!', error.message));
+      });
+    </script>
   </body>
 </html>
