--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
     <!-- Konten 0 // Headline/Hero -->
 
-    <div class="jumbotron">
+    <section id="Home">
       <div class="container text-center">
         <div class="row justify-content-center align-items-center">
-          <div class="col-md align-self-center">
-            <img src="asset/Hero.webp" alt="Designed by macrovector / Freepik" width="240" />
+          <div class="col-lg">
+            <img src="asset/Hero.webp" alt="Designed by macrovector / Freepik" width="350" />
           </div>
 
-          <div class="col-md text-start">
+          <div class="col-lg-5 align-items-center text-start">
             <h1 class="display-4 fw-bold text-primary">Elevate Your Business With Visual Branding</h1>
 
             <div class="row">
@@ -69,7 +69,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Elevate your business with Visual Branding -->
 
